[package]
name = "microstepper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

embedded-hal  = "=0.2.7"
nb = "1"
fugit = "0.3.5"

fixed = "*"
typenum = "*"
ramp-maker = "0.2.0"

log = "0.4.11"

[dependencies.void]
version = "*"
default-features = false

[dependencies.nom]
version = "5.1.2"
#version = "7.1.1"
default-features = false

